// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`day 03 > answer pt 1 1`] = `554003`;

exports[`day 03 > answer pt 2 1`] = `87263515`;

exports[`day 03 > can get numbers 1`] = `
Regions {
  "parsed": [
    "467..114..",
    "...*......",
    "..35..633.",
    "......#...",
    "617*......",
    ".....+.58.",
    "..592.....",
    "......755.",
    "...$.*....",
    ".664.598..",
  ],
  "regions": [
    {
      "number": 467,
      "x1": 0,
      "x2": 2,
      "y": 0,
    },
    {
      "number": 114,
      "x1": 5,
      "x2": 7,
      "y": 0,
    },
    {
      "number": 35,
      "x1": 2,
      "x2": 3,
      "y": 2,
    },
    {
      "number": 633,
      "x1": 6,
      "x2": 8,
      "y": 2,
    },
    {
      "number": 617,
      "x1": 0,
      "x2": 2,
      "y": 4,
    },
    {
      "number": 58,
      "x1": 7,
      "x2": 8,
      "y": 5,
    },
    {
      "number": 592,
      "x1": 2,
      "x2": 4,
      "y": 6,
    },
    {
      "number": 755,
      "x1": 6,
      "x2": 8,
      "y": 7,
    },
    {
      "number": 664,
      "x1": 1,
      "x2": 3,
      "y": 9,
    },
    {
      "number": 598,
      "x1": 5,
      "x2": 7,
      "y": 9,
    },
  ],
  "specials": [
    {
      "char": "*",
      "x": 3,
      "y": 1,
    },
    {
      "char": "#",
      "x": 6,
      "y": 3,
    },
    {
      "char": "*",
      "x": 3,
      "y": 4,
    },
    {
      "char": "+",
      "x": 5,
      "y": 5,
    },
    {
      "char": "$",
      "x": 3,
      "y": 8,
    },
    {
      "char": "*",
      "x": 5,
      "y": 8,
    },
  ],
  "str": "467..114..
...*......
..35..633.
......#...
617*......
.....+.58.
..592.....
......755.
...$.*....
.664.598..",
}
`;

exports[`day 03 > gets collisions 1`] = `
[
  {
    "number": 467,
    "x1": 0,
    "x2": 2,
    "y": 0,
  },
  {
    "number": 35,
    "x1": 2,
    "x2": 3,
    "y": 2,
  },
  {
    "number": 633,
    "x1": 6,
    "x2": 8,
    "y": 2,
  },
  {
    "number": 617,
    "x1": 0,
    "x2": 2,
    "y": 4,
  },
  {
    "number": 592,
    "x1": 2,
    "x2": 4,
    "y": 6,
  },
  {
    "number": 755,
    "x1": 6,
    "x2": 8,
    "y": 7,
  },
  {
    "number": 664,
    "x1": 1,
    "x2": 3,
    "y": 9,
  },
  {
    "number": 598,
    "x1": 5,
    "x2": 7,
    "y": 9,
  },
]
`;

exports[`day 03 > p2 sample 1`] = `
[
  [
    {
      "number": 467,
      "x1": 0,
      "x2": 2,
      "y": 0,
    },
    {
      "number": 35,
      "x1": 2,
      "x2": 3,
      "y": 2,
    },
  ],
  [
    {
      "number": 755,
      "x1": 6,
      "x2": 8,
      "y": 7,
    },
    {
      "number": 598,
      "x1": 5,
      "x2": 7,
      "y": 9,
    },
  ],
]
`;
